<resources>
    <string name="app_name">手机卫士</string>
    <string name="main_title_name">主界面</string>
    <string name="mian_under_title_line">手机安全卫士，Simon科技出品，必属精品!手机安全卫士，Simon科技出品，必属精品!</string>
    <string name="default_name">标题</string>
    <string name="set_pwd">请设置密码</string>
    <string name="put_pwd">请输入密码</string>
    <string name="setting_title">设置中心</string>
    <string name="tools_title">高级工具</string>
    <string name="antivirus_title">病毒查杀</string>
    <string name="querynumber_title">电话号码查询</string>
    <string name="autoupdate_setting">自动更新设置</string>
    <string name="autoupdate_state_open">自动更新已开启</string>
    <string name="autoupdate_state_close">自动更新已关闭</string>
    <string name="show_address_title">来电归属地显示设置</string>
    <string name="show_address_state_open">归属地显示已经开启</string>
    <string name="show_address_state_close">归属地显示已经关闭</string>
    <string name="show_address_location_title">归属地提示框位置</string>
    <string name="show_address_location_title_below">点击设置归属地提示框位置</string>
    <string name="abort_black_title">黑名单拦截设置</string>
    <string name="add_shortcut">添加快捷方式至桌面</string>
    <string name="abort_black_state_open">黑名单拦截已经开启</string>
    <string name="abort_black_state_close">黑名单拦截已经关闭</string>
    <string name="action_settings">Settings</string>
    <string name="admin_description">手机安全卫士获取管理员权限用于防盗丢失的远程锁屏，响铃，和数据擦除等操作</string>
</resources>
