<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:background="@color/textWrite"
              android:orientation="vertical">

    <TextView
        style="@style/activity_title_bar"
        android:background="@color/setting_title_color"
        android:text="@string/setting_title"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tv_autoupdate_setting"
             style="@style/auto_update_item_tv1"
            android:layout_marginTop="5dp"
            android:text="@string/autoupdate_setting"
            />

        <TextView
            android:id="@+id/tv_autoupdate_state"
             style="@style/auto_update_item_tv2"
            android:layout_below="@id/tv_autoupdate_setting"
            android:text="@string/autoupdate_state_open"
            />

        <CheckBox
            android:id="@+id/cb_autoupdate"
            style="@style/auto_update_item_cb"
            android:checked="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="1dp"
            android:layout_below="@id/tv_autoupdate_state"
            android:background="@android:color/darker_gray"></View>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tv_show_address_title"
            style="@style/auto_update_item_tv1"
            android:layout_marginTop="5dp"
            android:text="@string/show_address_title"
            />

        <TextView
            android:id="@+id/tv_show_address_state"
            style="@style/auto_update_item_tv2"
            android:layout_below="@id/tv_show_address_title"
            android:text="@string/show_address_state_close"
            />

        <CheckBox
            android:id="@+id/cb_show_address"
            style="@style/auto_update_item_cb"
            android:checked="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="1dp"
            android:layout_below="@id/tv_show_address_state"
            android:background="@android:color/darker_gray"></View>
    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/rl_reset_show_address_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tv_show_address_location"
            style="@style/auto_update_item_tv1"
            android:layout_marginTop="5dp"
            android:text="@string/show_address_location_title"
            />

        <TextView
            android:id="@+id/tv_show_address_toast"
            style="@style/auto_update_item_tv2"
            android:layout_below="@id/tv_show_address_location"
            android:text="@string/show_address_location_title_below"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="1dp"
            android:layout_below="@id/tv_show_address_toast"
            android:background="@android:color/darker_gray"></View>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tv_abort_black_title"
            style="@style/auto_update_item_tv1"
            android:layout_marginTop="5dp"
            android:text="@string/abort_black_title"
            />

        <TextView
            android:id="@+id/tv_abort_black_state"
            style="@style/auto_update_item_tv2"
            android:layout_below="@id/tv_abort_black_title"
            android:text="@string/abort_black_state_open"
            />

        <CheckBox
            android:id="@+id/cb_abort_black"
            style="@style/auto_update_item_cb"
            android:checked="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="1dp"
            android:layout_below="@id/tv_abort_black_state"
            android:background="@android:color/darker_gray"></View>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tv_add_shaortcut"
            style="@style/auto_update_item_tv1"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_shortcut"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="1dp"
            android:layout_below="@id/tv_add_shaortcut"
            android:background="@android:color/darker_gray"></View>
    </RelativeLayout>


</LinearLayout>